[package]
name = "nzsc_single_player_text_interface"
version = "0.2.2"
authors = ["Kyle Lin <kylejlin.us@gmail.com>"]

repository = "https://github.com/nzsc-org/nzsc_single_player_text_interface"

license = "MIT"

description = "A textual wrapper for nzsc_single_player."

[dependencies]
nzsc_single_player = "0.5.0"
